--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,11 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
+- script: |
+     displayName: 'Build Application'
+
+- script: |
+       $(FORTIFY_INSTALL_PATH)/bin/sourceanalyzer -b $(Build.DefinitionName) -clean
+       $(FORTIFY_INSTALL_PATH)/bin/sourceanalyzer -b $(Build.DefinitionName) $(BUILD_OUTPUT) -scan -f fortify-results.fpr
+       displayName: 'Run Fortify Static Code Analysis'
